samples/_failures_safe/1761730565_49fedf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f0679f1.c: In function ‘print_stats’:
./samples/SAFE/__tmp_0f0679f1.c:146:5: error: expected declaration or statement at end of input
  146 |     printf("WARNING entries: %d\n", analyzer->stats.warning_count);
      |     ^~~~~~
